--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -19,7 +19,7 @@
             "logout":"تسجيل الخروج",
             "logout message":"هل تريد حقا تسجيل الخروج؟ سوف تفقد جميع التغييرات الغير محفوظة."
         },
-        "Select Country": "أختر بلدك"
+        "Select Country": "يرجى تحديد بلدك"
 
     },
      "Profile": {
@@ -92,7 +92,8 @@
     },
     "home":{
         "Find Your Perfect" :"بيع، اشتري او أجر",
-        "Future Home" :"بدون متاعب!",
+        "Future Home EGY" :"بدون متاعب!",
+        "Future Home KSA" :"بكل يسر!",
         "Hassle Free . Save Time . No Hidden Fees":"بكفاءة عالية. وفر الوقت . وفر المال",
         "500 Developers":"( +٣٠,٠٠٠ وحدة , + ٥٠٠ مطور عقاري , ١٢ منطقة , + ١٠٠ مستشار عقاري)",
         "Property count": "+٣٠,٠٠٠",
@@ -111,7 +112,8 @@
         "Area":"المنطقة",
         "Neighborhood":"الحي",
         "Location": "الموقع",
-        "Compound": "كمبوند",
+        "Compound EGY": "كمبوند",
+        "Compound KSA": "مجتمعات",
         "Real estate type":"نوع العقار",
         "Propose": "عرض",
         "Price range":"متوسط السعر",
@@ -170,8 +172,8 @@
         },
         "top_searched_areas": "أهم المناطق التي تم البحث عنها",
         "top_developers": "كبار المطورين",
-        "share_your_quests": "شارك المهام الخاصة بك",
-        "share_your_quests_description": "محرك بحث 'العقار' مصمم بالذكاء الاصطناعي يأخذك بخطوات سهلة وبسيطة لتحديد احتياجاتك بدقة ، وهذه هي الطريقة الأكثر دقة وفعالية للحصول على عقارك المثالي."
+        "share_your_quests": "شاركنا بمتطلباتك للحصول على عقار احلامك",
+        "share_your_quests_description": "هل تبحث عن منزل أحلامك؟ مستشارينا العقاريين لديهم إمكانية الوصول إلى مجموعة واسعة من الوحدات والاختيارات مما يمكنهم من مساعدتك في العثور على العقار المثالي. لا تنتظر أكثر من ذلك للعثور على منزل أحلامك. تواصل معنا الان."
     },
     "quest":{
         "title":"شارك متطلباتك!",
@@ -266,8 +268,10 @@
         "Description": "خطوات بسيطة صممت باحترافية وعناية بواسطة خبراء عقاريين تكفل لك التمتع بتجربة مميزة للبحث عن عقارك المناسبة، تجعلك اقرب لاحلامك، وتضع أمامك الاختيارات الأفضل للعقار الذي تبحث عنه بكل سهولة ودقة، وسوف تظهر لك النتائج بمعيار مئوي لنسبة الملائمة لاختياراتك.",
         "Hint 1": "حدد موقعك الجغرافى ونوع الوحدة",
         "Hint 2": "في 3 خطوات متتابعة, حدد أولوياتك",
-        "choose compound": "للبحث عن كمبوند، أضغط هنا!",
-        "select compound": "لتحديد كمبوند، أضغط هنا!",
+        "choose compound EGY": "للبحث عن كمبوند، أضغط هنا!",
+        "select compound EGY": "لتحديد كمبوند، أضغط هنا!",
+        "choose compound KSA": "للبحث عن مجتمعات، أضغط هنا!",
+        "select compound KSA": "لتحديد مجتمعات، أضغط هنا!",
         "Home":"الرئيسية",
         "Buy a home":"شراء منزل",
         "Set your priorities and drag and drop them from left to right":"حدد أولوياتك واختارها من اليسار إلى اليمين",
@@ -527,7 +531,7 @@
     "solution_text":"العقار، هو اول محرك بحث مدعم بواسطة الذكاء الاصطناعي، ليجد لك افضل الخيارات المتاحة من العقارات للغرض الذي يناسب احتياجاتك، مما يوفر الكثير من الوقت والمجهود وعناء البحث، وايضا عمولات الشراء للوسطاء العقاريين، اما اذا كنت صاحب عقار يوفر لك العقار  المشتري المناسب مما يسهل من عملية البيع ويوفر الوقت والمجهود.",
     "try_solution":"جرب حل العقار",
     "search_button":"بحث سريع",
-    "quest_button": "شارك المهام الخاصة بك",
+    "quest_button": "ارسل طلباتك",
     "electronic_consultant":"جربه الآن",
     "advisor_description1": "جرب",
     "advisor_description2": " بحث العقار بالذكاء الاصطناعي,",
