--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -80,6 +80,7 @@
         "addUnit": "جميع بيانات وحدتك مطلوبة!",
         "addUnit area": "الرجاء اختيار مدينة بها منطقة متاحة!",
         "location": "يرجى التأكد من تحديد موقعك.",
+        "unit type": "يرجى التأكد من تحديد نوع العقار الخاص بك.",
         "choose_priority": "يرجى التأكد من تحديد أولوية واحدة على الأقل.",
         "set_priority": "يرجى التأكد من تعيين جميع الأولويات المختارة."
     },
@@ -173,7 +174,10 @@
         "top_searched_areas": "أهم المناطق التي تم البحث عنها",
         "top_developers": "كبار المطورين",
         "share_your_quests": "شاركنا بمتطلباتك للحصول على عقار احلامك",
-        "share_your_quests_description": "هل تبحث عن منزل أحلامك؟ مستشارينا العقاريين لديهم إمكانية الوصول إلى مجموعة واسعة من الوحدات والاختيارات مما يمكنهم من مساعدتك في العثور على العقار المثالي. لا تنتظر أكثر من ذلك للعثور على منزل أحلامك. تواصل معنا الان."
+        "share_your_quests_title1": "شارك",
+        "share_your_quests_title2": "طلبك",
+        "share_your_quests_description": "هل تبحث عن منزل أحلامك؟ مستشارينا العقاريين لديهم إمكانية الوصول إلى مجموعة واسعة من الوحدات والاختيارات مما يمكنهم من مساعدتك في العثور على العقار المثالي. لا تنتظر أكثر من ذلك للعثور على منزل أحلامك. تواصل معنا الان.",
+        "AI": "مدعم بالذكاء الاصطناعى"
     },
     "quest":{
         "title":"شارك متطلباتك!",
@@ -196,9 +200,10 @@
         "Mobile Number": "رقم الهاتف المحمول",
         "Min": "اقل",
         "Max": "أقصى",
-        "Min Price": "0 جنيه",
-        "Max Price": "100,000,000 جنيه"
-
+        "Min Price EGY": "0 جنيه",
+        "Max Price EGY": "900,000,000 جنيه",
+        "Min Price KSA": "0 ريال",
+        "Max Price KSA": "900,000,000 ريال"
     },
     "alert":{
         "failed": "فشل",
@@ -445,6 +450,7 @@
         "Sign Up":"تسجيل الدخول",
         "OTP Verification":"التحقق من رمز ال OTP",
         "Your name and image":"الاسم والصوره ",
+        "Your name and image developer":"معلومات الشركة الخاصة بك",
         "Please Enter a valid phone number":"من فضلك ادخل رقم هاتف صحيح",
         "Request OTP":"طلب رمز التحقق",
         "Enter the OTP sent to":"ادخل رمز التحقق المرسل الي ",
@@ -465,7 +471,9 @@
         "Company Name AR": "اسم الشركة (عربي)",
         "Website": "موقع إلكتروني",
         "Company Location": "موقع الشركة",
-        "Description": "وصف"
+        "Description": "الوصف",
+        "Description EN": "الوصف (بالإنجليزية)",
+        "Description AR": "الوصف (بالعربية)"
     },
     "howItWorks":{
         "How it works":"كيف يعمل",
@@ -492,6 +500,7 @@
         "project_name_en": "اسم المشروع (انجليزي)",
         "project_name_ar": "اسم المشروع (عربي)",
         "address": "عنوان",
+        "upload_developer_photos": "ارفع صور الشركة",
         "upload_photos": "ارفع صور المشروع",
         "upload_masterplan": "ارفع المخطط الرئيسي",
         "upload_logo": "ارفع شعار المشروع",
@@ -510,7 +519,7 @@
     },
     "advisor":{
         "title": "المستشار الإلكتروني",
-        "description": "الخطوات البسيطة التي صممها خبراء العقارات لضمان الحصول على الممتلكات المناسبة ، وسيتم عرض النتائج لك بنتيجة صلة. ستستغرق هذه الرحلة حوالي 4-7 دقائق.",
+        "description": "خطوات بسيطة صممها خبراء عقاريون لضمان الحصول على العقار المناسب لك ، وستظهر النتائج لك مع درجة الملاءمة. ستستغرق هذه الرحلة حوالي 4-7 دقائق.",
         "journey": "ستكون الرحلة في 3 خطوات متتالية ، بناءً على أهمية أولوياتك.",
         "priority_description": "في الخطوات التالية ستقوم بترتيب اولوياتك في البحث عن عقارك على مرحلتين من حيث الاهمية  المرحلة الأولى وهى الأهمية الأعلى المرحلة الثانية وهى الأهمية الاقل.",
         "choose_top_priority": "اختر أهم أولوياتك في اختيار عقار من القائمة أدناه.",
@@ -518,9 +527,12 @@
         "set_top_priority": "حدد أعلى أولوياتك.",
         "set_low_priority": "حدد أولوياتك المنخفضة.",
         "location": "الرجاء تحديد موقعك.",
+        "unit type": "الرجاء تحديد نوع العقار الخاصة بك.",
         "price": "الرجاء تحديد النطاق السعري الخاص بك.",
         "min": "الحد الأدنى",
-        "max": "الحد الأقصى"
+        "max": "الحد الأقصى",
+        "top": "أهم الأولويات",
+        "low": "أولويات منخفضة"
     },
     "no_visits":"ستظهر هنا الزيارات التي أكملتها مع مستشارينا.",
     "finding_property":"البحث عن الممتلكات المطابقة الخاصة بك",
@@ -552,7 +564,8 @@
     "saudi":"السعودية",
     "coming_soon":"قريباً",
     "how it works": "كيف يعمل",
-    "electronic advisor": "مستشار الكتروني",
+    "electronic advisor1": "مستشارك العقارى",
+    "electronic advisor2": "الالكترونى",
     "mobile app": "تطبيق جوال"
 
 }
