--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -114,7 +114,7 @@
         "Neighborhood":"الحي",
         "Location": "الموقع",
         "Compound EGY": "كمبوند",
-        "Compound KSA": "مجتمعات",
+        "Compound KSA": "مجمعات",
         "Real estate type":"نوع العقار",
         "Propose": "عرض",
         "Price range":"متوسط السعر",
@@ -275,8 +275,8 @@
         "Hint 2": "في 3 خطوات متتابعة, حدد أولوياتك",
         "choose compound EGY": "للبحث عن كمبوند، أضغط هنا!",
         "select compound EGY": "لتحديد كمبوند، أضغط هنا!",
-        "choose compound KSA": "للبحث عن مجتمعات، أضغط هنا!",
-        "select compound KSA": "لتحديد مجتمعات، أضغط هنا!",
+        "choose compound KSA": "للبحث عن مجمعات، أضغط هنا!",
+        "select compound KSA": "لتحديد مجمعات، أضغط هنا!",
         "Home":"الرئيسية",
         "Buy a home":"شراء منزل",
         "Set your priorities and drag and drop them from left to right":"حدد أولوياتك واختارها من اليسار إلى اليمين",
