--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -384,7 +384,9 @@
             "Select category masterplan": "قم بتحميل المخطط الرئيسي وصور الوحدة إذا كانت متوفرة",
             "Add photo for the":"اضف صورة واحده علي الاقل ل ",
             "add images":"اضافة صور"
-        }
+        },
+        "Sell login": "أضف عقارك مجاناً لإعلان عنه بكل سهولة على موقع العقار. قُم بتسجيل جميع تفاصيل العقار وأضف الصور، و رقم هاتفك، وسيتواصل المشترون معك مباشرةً."
+
     },
     "buy":{
         "Choose Priority":"اختر الأولوية",
@@ -402,8 +404,13 @@
         "Attributes search": "بحث بالمتغيرات",
         "fail": "!نأسف",
         "fail_message": ".لقد وصلت للحد الاقصى للوحدات المضافة المسموحة لك",
-        "fail_button": "حسنا"
-
+        "fail_button": "حسنا",
+        "Request Visit": "اهلاً بك في العقار, للمزيد من التفاصيل عن الوحدات وأنظمة السداد برجاء ترك رقم للإتصال واختيار وسيلة التواصل المناسبة: إتصال هاتفي أو مراسلة نصية عن طريق تطبيق واتساب.",
+        "Submit Request": "إرسال الطلب",
+        "Whatsapp": "واتساب",
+        "Call": "إتصال هاتفي",
+        "success_message": "تم إرسال طلبك بنجاح. سنحاول الاتصال بك في أقرب وقت ممكن.",
+        "fail_message2": "للأسف ، لقد حدث خطأ. يرجى محاولة تقديم الطلب مرة أخرى." 
     },
     "propertyDetails":{
         "All images":"كل الصور",
